packages/silkenweb/tests/macro-ui/derive-element-missing-target.stderr
error: There must be exactly one field, or specify `#[element(target)]` on a single field
 --> tests/macro-ui/derive-element-missing-target.rs:3:10
  |
3 | #[derive(Element)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Element` (in Nightly builds, run with -Z macro-backtrace for more info)
