packages/silkenweb/tests/macro-ui/derive-element-missing-target.rs
use silkenweb::{elements::html::Div, Element};

#[derive(Element)]
struct MyElement(Div, Div);

fn main() {}
